Slight dark mode bugfixes
Make the color input and open icon picker button have dark mode

--- a/src/plugins/widgets/links/Input.sass
+++ b/src/plugins/widgets/links/Input.sass
@@ -95,9 +95,18 @@
     padding: 0.5em
     width: 100%
     overflow: hidden
+    background-color: transparent
+    cursor: pointer
 
     &:hover
-      background-color: #e9e9ed
+      background-color: rgba(233, 233, 237, 0.1)
+
+    .dark &
+      border-color: #444
+      color: #ffffff
+
+      &:hover
+        background-color: rgba(255, 255, 255, 0.1)
 
   .conserveAspectRatioButton
     margin-left: 0.5em
