--- a/src/views/settings/Settings.sass
+++ b/src/views/settings/Settings.sass
@@ -146,6 +146,8 @@ $scrollbar-thumb-hover-dark: #555555
 
     input[type=color]
         display: block
+        background: transparent
+        border: none
 
     .button
         border: 0
